--- a/src/app.yaml
+++ b/src/app.yaml
@@ -165,6 +165,10 @@ handlers:
 - url: (/a/([^/]*)/edit_template)
   script: tenant_edit_template.app
   secure: always
+
+- url: (/a/([^/]*)/delete_template)
+  script: tenant_delete_template.app
+  secure: always
   
 # data cleansing
 - url: (/datacleansing$)
