--- a/src/app.yaml
+++ b/src/app.yaml
@@ -170,7 +170,7 @@ handlers:
   script: tenant_delete_template.app
   secure: always
 
-- url: (/tenant/blobstore/get)
+- url: (/a/([^/]*)/get_file_blob)
   script: tenant_get_file_blob.app
   secure: always
   
