--- a/src/index.yaml
+++ b/src/index.yaml
@@ -57,3 +57,8 @@ indexes:
   - name: file_id
   - name: sheet_name
   - name: created_date
+
+- kind: ExcelTemplateValue
+  properties:
+  - name: file_id
+  - name: created_date
